--- a/css/style.css
+++ b/css/style.css
@@ -144,20 +144,37 @@ a:hover{
     transition: 0.3s;
 }
 
-
 .slider-bar {
-  position: relative;
-  background: #D1D1D1;
   width: 30px;
-  height: 4px;
+  height: 5px;
+  background-color: #D1D1D1; /* Цвет неактивной полоски */
+  border-radius: 3px;
   cursor: pointer;
+  position: relative;
   overflow: hidden;
-  border-radius: 2px;
 }
 
+.slider-bar::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background-color: #000;
+}
 
-.slider-bar.active {
-    background: #000;
+.slider-bar.active::before {
+  animation: sliderProgress var(--interval) linear forwards;
+}
+
+@keyframes sliderProgress {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 100%;
+  }
 }
 
 
