--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@ a:hover{
     color: black;
     text-decoration: none;
 }
-
 .nav-link:hover{
     color:#6E9C9F !important;
     text-decoration: none;
@@ -57,7 +56,7 @@ a:hover{
     height: 27px;
     justify-content: center;
     align-items: center;
-    transition: background 0.5s ease; /* перемещено сюда */
+    transition: background 0.5s ease;
 }
 
 .icon-wrapper .icon-part {
@@ -78,7 +77,7 @@ a:hover{
 
 .header,
 .main-wrapper {
-    background: linear-gradient(to right, transparent 58%, #F0E6DD 58%);
+    background: linear-gradient(to right, white 58%, #F0E6DD 58%);
 }
 
 .left-section-hero{
@@ -158,7 +157,7 @@ a:hover{
 .shop-button:hover{
     background-color: #509498;
     color: white;
-    transition: 0.3s;
+    transition: 0.5s;
 }
 
 .slider-bar {
@@ -238,24 +237,9 @@ a:hover{
     z-index: 1;
 }
 
-.right-section-hero__image_container::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: 3px solid #fff;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-}
-
-.right-section-hero__image_container:hover::before {
-    opacity: 1;
-}
 
 .right-section-hero__image_container img {
-    transition: transform 0.3s ease;
+    transition: transform 0.5s ease;
 }
 
 .right-section-hero__image_container:hover img {
@@ -263,3 +247,104 @@ a:hover{
 }
 
 
+.new-collection__section {
+    padding-top: 7rem;
+}
+
+.section-title{
+    font-size: 40;
+    font-style: medium;
+    margin-bottom: 4rem;
+}
+
+.shop-item__title{
+    margin-top: 1.5rem;
+    font-size: 1.3rem;
+}
+
+.shop-item{
+    position: relative;
+    overflow: hidden;
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+
+.shop-item__price{
+    font-size: 1rem;
+    
+}
+.shop-item__price span{
+    color: #998E78;
+}
+.shop-item__price .standard_price{
+    display: none;
+}
+
+.shop-item__price.sale-active .standard_price {
+    display: inline;
+    text-decoration: line-through;
+}
+
+.shop-item__image-container {
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.shop-item__image {
+  transition: all 0.5s ease; 
+}
+.shop-item__image-container::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(110, 156, 159, 0.77); 
+  opacity: 0;
+  transition: opacity 0.5s ease;
+  z-index: 1;
+}
+
+.shop-item__arrow {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50px;
+  height: auto;
+  opacity: 0; 
+  transition: opacity 0.5s ease;
+  z-index: 2;
+}
+
+.shop-item__image-container:hover .shop-item__image {
+  transform: scale(1.1);
+}
+
+.shop-item__image-container:hover::before {
+  opacity: 1;
+}
+
+.shop-item__image-container:hover .shop-item__arrow {
+  opacity: 1;
+}
+
+
+.outline-shop-button{
+    margin-top: 3rem;
+    background: #fff;
+    color: #6E9C9F;
+    border: 1px solid #6E9C9F;
+}
+
+.outline-shop-button:hover{
+    background: #6E9C9F;
+    color: #fff;
+    transition: 0.5s;
+}
