--- a/css/style.css
+++ b/css/style.css
@@ -357,26 +357,14 @@ a:hover{
 .shop-item__link--title .shop-item__title {
     color: black;
     transition: color 0.5s ease; 
-}
-
-.shop-item__link--title::after {
-    content: '';
-    position: absolute;
-    bottom: -2px;
-    left: 0;
-    width: 0;
-    height: 2px;
-    background-color: #6E9C9F;
-    transition: width 0.5s ease;
+    margin-bottom: 3px;
 }
 
 .shop-item__link--title:hover .shop-item__title {
     color: #6E9C9F;
 }
 
-.shop-item__link--title:hover::after {
-    width: 100%;
-}
+
 .outline-shop-button{
     margin-top: 3rem;
     background: #fff;
