--- a/css/style.css
+++ b/css/style.css
@@ -561,5 +561,127 @@ a:hover{
 .footer__contacts-visa{
     margin-top: 2rem;
 }
+#openPopupBtn{
+    border: none;
+    padding: 0;
+    margin: 0;
+    background: none;
+}
+
+.popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  background: rgba(110, 156, 159, 0.95);
+  z-index: 1000;
+}
+
+/* Само окно */
+.popup {
+  cursor: default;
+  background: #fff;
+  display: flex;
+  flex-direction: column;
+  padding: 2rem 5rem;
+  max-width: 503px;
+  position: relative;
+  text-align: center;
+}
+
+/* Крестик */
+.popup-close {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  width: 20px;
+  height: 20px;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.popup-close::before,
+.popup-close::after {
+  content: "";
+  position: absolute;
+  left: 9px;
+  top: 0;
+  height: 25px;
+  width: 2px;
+  background-color: #333;
+}
+
+.popup-close::before {
+  transform: rotate(45deg);
+}
+
+.popup-close::after {
+  transform: rotate(-45deg);
+}
+
+.popup-title{
+    font-size: 25px;
+    margin-top: 2rem;
+}
+
+.popup-form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 1.5rem;
+}
+
+.popup-field {
+  position: relative;
+  margin-bottom: 1.5rem;
+}
+
+.popup-input {
+  width: 100%;
+  padding: 0.75rem 0 0.25rem 0;
+  font-size: 1rem;
+  border: none;
+  border-bottom: 1px solid #000;
+  background-color: transparent;
+  outline: none;
+  cursor: text;
+}
+
+.popup-label {
+  position: absolute;
+  top: 0.75rem;
+  left: 0;
+  font-size: 1rem;
+  color: #aaa;
+  pointer-events: none;
+  transition: 0.3s ease all;
+}
+
+.popup-input:focus + .popup-label,
+.popup-input:not(:placeholder-shown) + .popup-label {
+  top: -0.75rem;
+  font-size: 0.75rem;
+  color: #6E9C9F;
+}
 
 
+.popup-submit {
+  padding: 0.75rem 1rem;
+  background-color: #6E9C9F;
+  color: white;
+  border: none;
+  cursor: pointer;
+  transition: background 0.5s ease;
+  width: 351px;
+  height: 68px;
+  font-size: 17px;
+}
+
+.popup-submit:hover {
+  background-color: #509498;
+}
