--- a/css/style.css
+++ b/css/style.css
@@ -625,7 +625,7 @@ a:hover{
 }
 
 .popup-title{
-    font-size: 25px;
+    font-size: 24px;
     margin-top: 2rem;
 }
 
@@ -684,4 +684,16 @@ a:hover{
 
 .popup-submit:hover {
   background-color: #509498;
+}
+
+
+.popup-success-close{
+    width: 168px;
+    height: 68px;
+}
+
+.success-popup{
+    max-width: 600px;
+    justify-content: center;
+    align-items: center;
 }
