feat: add footer to shop page

--- a/css/style.css
+++ b/css/style.css
@@ -701,10 +701,10 @@ a:hover{
     align-items: center;
 }
 
-.shop-hero{
+.page-hero{
     margin-top: 5rem;
 }
-.shop-hero__title{
+.page-hero__title{
     margin-bottom: 1.6rem;;
 }
 
