--- a/css/style.css
+++ b/css/style.css
@@ -967,3 +967,51 @@ a:hover{
     align-items: center;
     background: #F1EADC;
 }
+
+.cart__header{
+    font-size: 20px;
+    font-weight: medium;
+}
+.cart__product-remove-btn{
+    font-size: 30px;
+    font-weight: 200;
+    padding: 0;
+    margin: 0;
+}
+.cart__product-image{
+    max-width: 136px;
+    max-height:205px;
+}
+.cart__item{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    
+}
+
+.cart__product{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 2rem;
+}   
+.cart__product-name{
+    padding:0;
+    margin: 0;
+}
+.cart__item{
+    margin-top: 4rem;
+}
+
+.cart__price{
+    display: flex;
+    align-items: center;
+}
+.cart__price-value{
+    margin: 0;
+    padding: 0;
+}
+.cart__total-value{
+    margin: 0;
+    padding: 0;
+}
