--- a/css/style.css
+++ b/css/style.css
@@ -1066,3 +1066,29 @@ a:hover{
     align-items: center;
     gap: 1rem;
 }
+
+.order__info-block{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+.order__info-title{
+  font-size: 25px;
+    font-weight: medium;
+    margin-bottom: 2rem;  
+}
+
+.order__info-subtitle{
+    font-size: 20px;
+    font-weight: medium;
+    margin-bottom: 1rem;
+}
+.order__info-summary-text{
+    width: 284px;
+    height: 57px;
+    padding: 10px 20px;
+}
+.order__info-summary-span{
+    font-size: 20px !important;
+}
