--- a/css/style.css
+++ b/css/style.css
@@ -1092,3 +1092,56 @@ a:hover{
 .order__info-summary-span{
     font-size: 20px !important;
 }
+
+
+.order__payment-method{
+    margin-top: 5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;  
+
+}
+
+.order__payment-method-form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.radio-label {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  position: relative;
+  font-size: 18px;
+}
+
+
+.radio-label input[type="radio"] {
+  display: none;
+}
+
+.radio-label::before {
+  content: "";
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  border: 2px solid black;
+  margin-right: 10px;
+  background-color: white;
+}
+
+
+.radio-label input[type="radio"]:checked + .radio-text::before {
+  content: "";
+  position: absolute;
+  left: 4px;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 10px;
+  height: 10px;
+  background-color: black;
+}
+.order__comment-field{
+    margin-top: 24px;
+}
