feat: django initialization

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1160,6 +1160,6 @@ a:hover{
     padding: 0;
 }
 .confirm-order__button-to-main{
-    padding: 22gpx 50px;
+    padding: 22px 50px;
     margin: 0;
 }
