--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -31,7 +31,7 @@
 
     <script src="{% static 'js/vendor/bootstrap.bundle.min.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-
+    <script src="https://unpkg.com/inputmask@5.0.8/dist/inputmask.min.js"></script>
     {% block extra_js %}{% endblock %}
 </body>
 </html>
