feat: create contact page

--- a/shop/pages/templates/pages/about.html
+++ b/shop/pages/templates/pages/about.html
@@ -8,7 +8,7 @@
             <h1 class="section-title page-hero__title">О бренде</h1>
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="index.html">Главная</a></li>
+                    <li class="breadcrumb-item"><a href="{% url 'pages:home' %}">Главная</a></li>
                     <li class="breadcrumb-item active" aria-current="page">О бренде</li>
                 </ol>
             </nav>
