--- a/shop/templates/includes/header.html
+++ b/shop/templates/includes/header.html
@@ -82,3 +82,5 @@
 
         </nav>
     </header>
+    <script src="{% static 'js/phone_mask.js' %}" defer></script>
+    <script src="{% static 'js/popup.js' %}" defer></script>
