--- a/shop/static/css/style.css
+++ b/shop/static/css/style.css
@@ -281,7 +281,6 @@ a:hover{
     display: flex; 
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     
 }
 
@@ -293,25 +292,34 @@ a:hover{
 .shop-item__price span{
     color: #998E78;
 }
-.shop-item__price .standard_price{
-    display: none;
+.shop-item__price .standard_price {
+    color: #998E78;
+    text-decoration: none;
 }
 
 .shop-item__price.sale-active .standard_price {
-    display: inline;
+    color: #999;
     text-decoration: line-through;
+    margin-right: 7px;
 }
 
+.shop-item__price:not(.sale-active) .sale-price {
+    display: none;
+}
 .shop-item__image-container {
     position: relative;
     overflow: hidden;
     cursor: pointer;
+    aspect-ratio: 12/16;
 }
 
 .shop-item__link--image{
     display: block;
 }
 .shop-item__image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   transition: all 0.5s ease; 
 }
 .shop-item__link--image::before {
@@ -363,6 +371,7 @@ a:hover{
     color: black;
     transition: color 0.5s ease; 
     margin-bottom: 3px;
+    text-align: center;
 }
 
 .shop-item__link--title:hover .shop-item__title {
