--- a/shop/static/css/style.css
+++ b/shop/static/css/style.css
@@ -891,7 +891,9 @@ a:hover{
 }
 
 .small_standard_price{
+    text-decoration: line-through !important;
     font-size: 30px !important;
+
 }
 .product-card__colors{
     display: flex;
