--- a/shop/templates/includes/footer.html
+++ b/shop/templates/includes/footer.html
@@ -19,7 +19,7 @@
                     </li>
                     <li class="footer__nav-item nav-item">
                         <div class="footer__nav-shop">
-                            <a class="footer__nav-link nav-link shop-page {% if request.resolver_match.url_name == 'catalog' %}active{% endif %}" href="{% url 'catalog:catalog' %}">Магазин</a>
+                            <a class="footer__nav-link nav-link shop-page {% if request.resolver_match.url_name == 'catalog' or request.resolver_match.url_name == 'product_detail'%}active{% endif %}" href="{% url 'catalog:catalog' %}">Магазин</a>
                             <ul class="footer__nav-sublist">
                                 <li><a href="#" class ="footer__nav-sublink">Пальто</a></li>
                                 <li><a href="#" class ="footer__nav-sublink">Свитшоты</a></li>
